[project]
name = "egsis"
version = "0.1.0"
description = "Exploratory Graph-based Semi-Supervised Image Segmentation"
authors = [
    {name = "Manoel Vilela", email = "manoel_vilela@engineer.com"},
]
dependencies = [
    "opencv-python>=4.6.0.66",
    "scikit-image>=0.19.3",
    "typer>=0.6.1",
    "matplotlib>=3.5.3",
    "networkx>=2.8.6",
    "scipy>=1.9.1",
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.black]
line_length = 120
target_version = ["py310"]

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
exclude = "egsis/.ipynb_checkpoints,notebooks/.ipynb_checkpoints"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.3",
    "pytest-mock>=3.8.2",
    "flake8>=5.0.4",
    "mypy==0.981",
    "black>=22.8.0",
    "black-macchiato>=1.3.0",
    "jupyterlab>=3.4.6",
    "coverage>=6.5.0",
    "pytest-cov>=4.0.0",
    "jupyter-innotater>=0.3.1",
    "pygraphviz>=1.10",
]

[tool.pdm.scripts]
lint = {composite = ["flake8", "mypy"]}
test = "pytest -vv -p no:cacheprovider --cov=egsis --cov-report xml:tests/coverage.xml --cov-report term"
tests = {composite = ["test tests/", "coverage json"]}
format = "black egsis/ tests/"
check = {composite = ["lint egsis/", "test tests/"]}
egsis = {call = "egsis.main:cli"}
notebook = "jupyter lab"
