[project]
name = "egsis"
version = "0.1.0a0"
description = "Exploratory Graph-based Semi-Supervised Image Segmentation"
authors = [
    {name = "Manoel Vilela", email = "manoel_vilela@engineer.com"},
]
dependencies = [
    "opencv-python>=4.6.0.66",
    "scikit-image>=0.21.0rc0",
    "typer>=0.6.1",
    "matplotlib>=3.7.1",
    "networkx>=2.8.6",
    "scipy>=1.10.1",
    "loguru>=0.6.0",
    "ipyannotations>=0.5.1",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = {text = "MIT"}
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.black]
line_length = 120
target_version = ["py310"]

[tool.mypy]
ignore_missing_imports = true

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black-macchiato>=1.3.0",
    "black>=22.8.0",
    "coverage>=7.2.5",
    "flake8>=5.0.4",
    "jupyterlab>=3.4.6",
    "mypy==0.981",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.2",
    "pytest>=7.3.1",
]

[tool.pdm.scripts]
lint = {composite = ["flake8", "mypy"]}
test = "pytest -vv -p no:cacheprovider --cov=egsis --cov-report xml:tests/coverage.xml --cov-report term"
tests = {composite = ["test tests/", "coverage json"]}
format = "black egsis/ tests/"
check = {composite = ["lint egsis/", "test tests/"]}
egsis = {call = "egsis.main:cli"}
notebook = "jupyter lab"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
